# BrainCrab

./: .gitignore  Cargo.toml  README.md
bf_core/: Cargo.toml
bf_core/src/: lib.rs
bf_macros/: Cargo.toml
bf_macros/src/: lib.rs
braincrab_core/: Cargo.toml
braincrab_core/src/: lib.rs
braincrab_macros/: Cargo.toml
braincrab_macros/src/: lib.rs
examples/: abf_testing.rs  allocator_design.rs  parse_braincrab.rs  temp.rs
examples/braincrab_files/: array.bc  cat.bc  const_test.bc  count.bc  draw.bc  modulo_test.bc  mut_array.bc  newcat.bc  number_array.bc  number_testing.bc  parse_test.bc  pattern.bc  pretty_line.bc  primes.bc  primes2.bc  test.bc  type_testing.bc
src/: absolute_bf.rs  allocator.rs  ast.rs  cli.rs  compiler.rs  compiler_error.rs  constant_value.rs  lib.rs  main.rs  new_abf.rs  parser.rs  types.rs  value.rs
src/abf/: abf_ast.rs  abf_compiler.rs  abf_optimizer.rs  abf_program_builder.rs  mod.rs
