[package]
name = "braincrab"
version = "0.1.0"
edition = "2021"
authors = ["Rian Goossens <riangoossens@gmail.com>"]
description = """
BrainCrab
A Brainfuck cli with various utilities included."""

[dependencies]
braincrab_core = { path = "braincrab_core" }
braincrab_macros = { path = "braincrab_macros" }
clap = { version = "4.5.21", features = ["derive"] }