[package]
name = "braincrab"
version = "0.1.0"
edition = "2021"
authors = ["Rian Goossens <riangoossens@gmail.com>"]
description = """
BrainCrab
A Brainfuck cli with various utilities included."""

[dependencies]
bf_core = { path = "bf_core" }
bf_macros = { path = "bf_macros" }
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
